--- a/blogdetail.html
+++ b/blogdetail.html
@@ -296,7 +296,7 @@
     </div>
     <div class="container py-7 blog-detail-main">
       <div class="row">
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-12 wow fadeInLeft">
           <ul class="px-3 navbar-nav gap-3 position-sticky top-0">
             <li class="list-group-item">
               <span class="fs-6 fw-medium text-border-color">Date</span>
@@ -316,7 +316,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-lg-10 col-sm-12">
+        <div class="col-lg-10 col-sm-12 wow fadeInRight">
           <div class="content px-7 d-flex flex-column gap-3">
             <h3 class="content-title fs-5 fw-semibold lh-base">
               In the fast-evolving world of home decor, embracing the art of
