--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -30,210 +30,7 @@
     />
     <link rel="stylesheet" href="../assets/css/app.css" />
   </head>
-  <!-- <body class="bg-light"> -->
-  <!-- MODAL THONG BAO  -->
 
-  <!-- <div
-      class="offcanvas offcanvas-end"
-      tabindex="-1"
-      id="notificationsAdmin"
-      aria-labelledby="offcanvasRightLabel"
-    >
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasRightLabel">
-          Offcanvas right
-        </h5>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="offcanvas"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="offcanvas-body">...</div>
-    </div>
-    <div class="container-fuild">
-      <div class="page-header bg-white shadow-sm position-fixed top-0 end-0">
-        <div
-          class="header-main w-100 position-relative px-5 py-4 m-0 d-flex align-items-center"
-        >
-          <div class="img-logo d-none">
-            <img src="../uploads/admin_img/logores.png" alt="" width="130" />
-          </div>
-          <form
-            action=""
-            class="admin-header-search w-50 position-relative z-1"
-          >
-            <div class="admin-form-group w-100">
-              <div class="type-header w-100">
-                <input
-                  type="text"
-                  placeholder="Search product"
-                  class="w-100 px-4 border border-2 border-secondary fs-6 py-2 rounded-2"
-                />
-              </div>
-            </div>
-          </form>
-          <div
-            class="admin-header-right ms-auto d-flex align-items-center gap-4"
-          >
-            <div class="admin-header-right-item fs-4">
-              <ion-icon
-                class="hover-list"
-                name="notifications"
-                data-bs-toggle="offcanvas"
-                data-bs-target="#notificationsAdmin"
-                aria-controls="offcanvasRight"
-              ></ion-icon>
-            </div>
-            <div class="admin-header-right-item fs-4">
-              <ion-icon class="hover-list" name="sunny"></ion-icon>
-            </div>
-
-            <div class="admin-header-right-item">
-              <div class="dropdown">
-                <div
-                  class="admin-header-account rounded-circle overflow-hidden"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  <img
-                    src="../uploads/admin_img/person.png"
-                    alt=""
-                    width="30"
-                    height="30"
-                  />
-                </div>
-
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="admin-body">
-        <div
-          class="admin-sidebar position-fixed top-0 z-2 bg-white h-auto shadow-sm overflow-hidden"
-        >
-          <div
-            class="admin-sidebar-logo d-flex align-items-center justify-content-center"
-          >
-            <img src="../uploads/logo.png" alt="" />
-          </div>
-          <div class="admin-sidebar-nav">
-            <div class="admin-sb-content p-4">
-              <div class="accordion" id="accordionExample">
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button
-                      class="accordion-button"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#collapseOne"
-                      aria-expanded="true"
-                      aria-controls="collapseOne"
-                    >
-                      Accordion Item #1
-                    </button>
-                  </h2>
-                  <div
-                    id="collapseOne"
-                    class="accordion-collapse collapse show"
-                    data-bs-parent="#accordionExample"
-                  >
-                    <div class="accordion-body">
-                      <strong>This is the first item's accordion body.</strong>
-                      It is shown by default, until the collapse plugin adds the
-                      appropriate classes that we use to style each element.
-                      These classes control the overall appearance, as well as
-                      the showing and hiding via CSS transitions. You can modify
-                      any of this with custom CSS or overriding our default
-                      variables. It's also worth noting that just about any HTML
-                      can go within the <code>.accordion-body</code>, though the
-                      transition does limit overflow.
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#collapseTwo"
-                      aria-expanded="false"
-                      aria-controls="collapseTwo"
-                    >
-                      Accordion Item #2
-                    </button>
-                  </h2>
-                  <div
-                    id="collapseTwo"
-                    class="accordion-collapse collapse"
-                    data-bs-parent="#accordionExample"
-                  >
-                    <div class="accordion-body">
-                      <strong>This is the second item's accordion body.</strong>
-                      It is hidden by default, until the collapse plugin adds
-                      the appropriate classes that we use to style each element.
-                      These classes control the overall appearance, as well as
-                      the showing and hiding via CSS transitions. You can modify
-                      any of this with custom CSS or overriding our default
-                      variables. It's also worth noting that just about any HTML
-                      can go within the <code>.accordion-body</code>, though the
-                      transition does limit overflow.
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#collapseThree"
-                      aria-expanded="false"
-                      aria-controls="collapseThree"
-                    >
-                      Accordion Item #3
-                    </button>
-                  </h2>
-                  <div
-                    id="collapseThree"
-                    class="accordion-collapse collapse"
-                    data-bs-parent="#accordionExample"
-                  >
-                    <div class="accordion-body">
-                      <strong>This is the third item's accordion body.</strong>
-                      It is hidden by default, until the collapse plugin adds
-                      the appropriate classes that we use to style each element.
-                      These classes control the overall appearance, as well as
-                      the showing and hiding via CSS transitions. You can modify
-                      any of this with custom CSS or overriding our default
-                      variables. It's also worth noting that just about any HTML
-                      can go within the <code>.accordion-body</code>, though the
-                      transition does limit overflow.
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="admin-content-main bg-secondary">
-          <h3>123</h3>
-          <footer class="admin-footer position-fixed bottom-0 end-0 bg-black">
-            123
-          </footer>
-        </div>
-      </div>
-    </div> -->
   <body>
     <div
       id="page-container"
@@ -273,7 +70,7 @@
         <ul class="side-nav p-3 d-flex flex-column gap-2 overflow-y">
           <li class="side-nav-item list-group-item">
             <div
-              class="side-nav-item-content p-2 rounded-2 d-flex gap-3 align-items-center cursor hover-item"
+              class="side-nav-item-content p-2 rounded-2 d-flex gap-3 align-items-center cursor hover-item active-navbar"
             >
               <ion-icon class="text-primary fs-5" name="rocket"></ion-icon>
               <span class="fs-6 fw-medium">Dashboard</span>
@@ -594,8 +391,144 @@
       </header>
       <!-- MAIN  -->
       <div id="main-container" class="pt-7 d-flex flex-column ms-auto">
-        <div class="admin-main-content p-3">
-          <h3 class="">123</h3>
+        <div class="admin-main-content p-3 container-fluid">
+          <div class="row g-3">
+            <div class="col-xl-3 col-lg-6 col-sm-6">
+              <div
+                class="dashboard-list overflow-hidden p-3 bg-white border border-2 border-secondary rounded-2 shadow-sm"
+              >
+                <div
+                  class="dashboard-list-content py-2 d-flex justify-content-between border-start border-primary border-4"
+                >
+                  <div class="ms-3 dashboard-list-body">
+                    <span class="text-border-color fs-5 fw-medium"
+                      >Total Revenue</span
+                    >
+                    <h4>$6659</h4>
+                  </div>
+                  <div
+                    class="dashboard-list-icon text-center align-self-center"
+                  >
+                    <ion-icon
+                      class="bg-secondary text-primary p-3 fs-4 rounded-2"
+                      name="file-tray-stacked"
+                    ></ion-icon>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-lg-6 col-sm-6">
+              <div
+                class="dashboard-list overflow-hidden p-3 bg-white border border-2 border-secondary rounded-2 shadow-sm"
+              >
+                <div
+                  class="dashboard-list-content py-2 d-flex justify-content-between border-start border-info border-4"
+                >
+                  <div class="ms-3 dashboard-list-body">
+                    <span class="text-border-color fs-5 fw-medium"
+                      >Total Order</span
+                    >
+                    <h4>1229</h4>
+                  </div>
+                  <div
+                    class="dashboard-list-icon text-center align-self-center"
+                  >
+                    <ion-icon
+                      class="bg-info bg-opacity-10 text-info p-3 fs-4 rounded-2"
+                      name="bag-handle"
+                    ></ion-icon>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-lg-6 col-sm-6">
+              <div
+                class="dashboard-list overflow-hidden p-3 bg-white border border-2 border-secondary rounded-2 shadow-sm"
+              >
+                <div
+                  class="dashboard-list-content py-2 d-flex justify-content-between border-start border-danger border-4"
+                >
+                  <div class="ms-3 dashboard-list-body">
+                    <span class="text-border-color fs-5 fw-medium"
+                      >Total Products</span
+                    >
+                    <h4>659</h4>
+                  </div>
+                  <div
+                    class="dashboard-list-icon text-center align-self-center"
+                  >
+                    <ion-icon
+                      class="bg-danger bg-opacity-10 text-danger p-3 fs-4 rounded-2"
+                      name="cube"
+                    ></ion-icon>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-lg-6 col-sm-6">
+              <div
+                class="dashboard-list overflow-hidden p-3 bg-white border border-2 border-secondary rounded-2 shadow-sm"
+              >
+                <div
+                  class="dashboard-list-content py-2 d-flex justify-content-between border-start border-warning border-4"
+                >
+                  <div class="ms-3 dashboard-list-body">
+                    <span class="text-border-color fs-5 fw-medium"
+                      >Total Customers</span
+                    >
+                    <h4>4.6K</h4>
+                  </div>
+                  <div
+                    class="dashboard-list-icon text-center align-self-center"
+                  >
+                    <ion-icon
+                      class="bg-warning text-warning bg-opacity-10 p-3 fs-4 rounded-2"
+                      name="person-add"
+                    ></ion-icon>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-6">
+              <div
+                class="dashboard-list overflow-hidden p-3 bg-white border border-2 border-secondary rounded-2 shadow-sm"
+              >
+                <div class="dashboard-list-header">
+                  <h4 class="fs-5">Revenue Report</h4>
+                </div>
+                <div
+                  id="RevenueReport"
+                  class="dashboard-list-content py-2 d-flex justify-content-between"
+                ></div>
+              </div>
+            </div>
+            <div class="col-xl-6">
+              <div
+                class="dashboard-list overflow-hidden p-3 bg-white border border-2 border-secondary rounded-2 shadow-sm"
+              >
+                <div class="dashboard-list-header">
+                  <h4 class="fs-5">Earning</h4>
+                </div>
+                <div
+                  id="Earning"
+                  class="dashboard-list-content py-2 d-flex justify-content-between"
+                ></div>
+              </div>
+            </div>
+            <div class="col-xl-6">
+              <div
+                class="dashboard-list overflow-hidden p-3 bg-white border border-2 border-secondary rounded-2 shadow-sm"
+              >
+                <div class="dashboard-list-header">
+                  <h4 class="fs-5">Visitor</h4>
+                </div>
+                <div
+                  id="Visitor"
+                  class="dashboard-list-content py-2 d-flex justify-content-center"
+                ></div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <!-- FOOTER  -->
@@ -611,6 +544,7 @@
         </div>
       </footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="
     https://cdn.jsdelivr.net/npm/wowjs@1.1.3/dist/wow.min.js
     "></script>
